fixed alignment of select skills

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11989,3 +11989,11 @@ textarea.form-control-lg {
 }
 
 
+.jb-skill {
+	cursor: pointer
+}
+
+.jb-skill:hover{
+	color: blue;
+}
+
